--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -68,6 +68,39 @@ input, select {
     font-size: 16px;
 }
 
+.name-container {
+    position: relative;
+    width: 100%;
+}
+
+.name-container input {
+    width: 100%;
+    padding-right: 2.5rem;
+    padding-left: 10px;
+    box-sizing: border-box;
+}
+
+#clear-name {
+    position: absolute;
+    top: 35%;
+    right: 0.75rem;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    width: 1.5rem;
+    height: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#clear-name img {
+    width: 100%;
+    height: auto;
+}
+
 .password-container {
     position: relative;
     width: 100%;
@@ -78,6 +111,27 @@ input, select {
     padding-right: 2.5rem;
     padding-left: 10px;
     box-sizing: border-box;
+}
+
+#clear-password {
+    position: absolute;
+    top: 35%;
+    right: 2.5rem;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    width: 1.5rem;
+    height: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#clear-password img {
+    width: 100%;
+    height: auto;
 }
 
 #show-password {
